# GeneticAlgorithm

./: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Connection.cpp  Dataset.cpp  Dataset.h  Gene.cpp  Gene.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Genome.cpp  Genome.h  Indyvidual.h  Layer.cpp  Layer.h  LoadingDatasetFunctions.cpp  LoadingDatasetFunctions.h  Net.cpp  Net.h  NeuralNet.cpp  NeuralNet.h  Neuron.cpp  Neuron.h  Population.cpp  Population.h  README.md  main.cpp
Datasets/: subset1.txt  subset10.txt  subset2.txt  subset3.txt  subset4.txt  subset5.txt  subset6.txt  subset7.txt  subset8.txt  subset9.txt  validationSet.txt
Exceptions/: DifferentSizesOfVectors.cpp  DifferentSizesOfVectors.h  FeaturesLabesLenNotEqualExc.cpp  FeaturesLabesLenNotEqualExc.h  WrongMethod.cpp  WrongMethod.h  WrongParameterRange.cpp  WrongParameterRange.h
GeneticAlgorithm/: Algorithm.h  Gene.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h  Indyvidual.cpp  Indyvidual.h  Population.cpp  Population.h  Settings.h
Neural_Net/: Connection.cpp  Connection.h  Layer.cpp  Layer.h  MathFunctions.h  NeuralNet.cpp  NeuralNet.h  Neuron.cpp  Neuron.h
